Added illegalargumentexceptions to methods and constructor