@@ -12,14 +12,21 @@ public abstract class MoneyAction {
   private RecurringType type;
 
   /**
-   * Instantiates a new Money action.
+   * Instantiates a new Money action. Amount needs to be greater than zero and description needs
+   * to not be empty or blank.
    *
    * @param amount the amount
    * @param description the description
    * @param category the category
    * @param type the type
    */
-  public MoneyAction(int amount, String description, Category category, RecurringType type) {
+  public MoneyAction(int amount, String description, Category category, RecurringType type) throws IllegalArgumentException {
+    if (amount < 0) {
+      throw new IllegalArgumentException("Amount must be non-negative");
+    }
+    if (description == null || description.trim().isEmpty()) {
+      throw new IllegalArgumentException("Description must not be empty or blank");
+    }
     this.amount = amount;
     this.description = description;
     this.category = category;
@@ -40,10 +47,11 @@ public abstract class MoneyAction {
    *
    * @param amount the amount
    */
-  public void setAmount(int amount) {
-    if (amount >= 0) {
-      this.amount = amount;
+  public void setAmount(int amount) throws IllegalArgumentException {
+    if (amount < 0) {
+      throw new IllegalArgumentException("Amount must be non-negative");
     }
+    this.amount = amount;
   }
 
   /**
@@ -60,10 +68,11 @@ public abstract class MoneyAction {
    *
    * @param description the description
    */
-  public void setDescription(String description) {
-    if (!description.isEmpty() && !description.isBlank()) {
-      this.description = description;
+  public void setDescription(String description) throws IllegalArgumentException {
+    if (description == null || description.trim().isEmpty()) {
+      throw new IllegalArgumentException("Description must not be empty or blank");
     }
+    this.description = description;
   }
 
   /**
